<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.willeccles.weathermaster.SettingsActivity">

    <include layout="@layout/layout_toolbar" android:id="@+id/my_toolbar"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/celsiusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Temperature Unit"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/celsiusButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tempRadioClicked"
            android:text="Celsius" />

        <RadioButton
            android:id="@+id/fahrenheitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tempRadioClicked"
            android:text="Fahrenheit" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/mapOptionRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/mapForecastOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Map and Favorites go to..."
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/mapForecastOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="mapDoneRadioClicked"
            android:text="5-day forecast" />

        <RadioButton
            android:id="@+id/mapCurrentOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="mapDoneRadioClicked"
            android:text="Current weather" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
