<resources>
    <string name="app_name">Weather Master</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_permission_dialog_message">You\'ll need to allow us access to your location in order to use the map.</string>
    <string name="no_permission_dialog_title">Permission Required</string>
    <string name="ok">OK</string>
    <string name="prefFileKey">me.willeccles.weathermaster.prefs</string>
    <string name="unitPrefKey">UNIT_PREF</string>
    <string name="location_error_dialog">There was an error finding your location. Please type in a zip code or location.</string>
    <string name="location_error_dialog_title">Oops!</string>
    <string name="map_done_pref_name">MAP_DONE_PREF</string>
    <string name="confirm_delete_title">Delete favorite?</string>
    <string name="confirm_delete_message">Are you sure you want to delete this favorite?</string>
    <string name="weather_error_message">You may have entered an invalid location, or the weather service may be down.</string>
    <string name="weather_error_title">Error Retrieving Weather</string>
    <string name="confirm_delete_all_message">This will delete all of your favorite locations!</string>
    <string name="confirm_delete_all_title">Are you sure?</string>
    <string name="share_title">Share Weather</string>
</resources>
