...
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:ems="10"
...
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <Button
        android:id="@+id/buttonCurrent"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:onClick="weatherButtonPressed"
        android:text="Current"
...
